<resources>
    <string name="app_name">Magazin articole sportive</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="sports_array">
        <item>Football</item>
        <item>Tennis</item>
        <item>Basket</item>
        <item>Swimming</item>
        <item>Running</item>
        <item>Handball</item>
        <item>TODO</item>
    </string>
    <string name="menu_item_cart">Cart</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_categories">Categories</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_orders">Orders</string>
    <string name="menu_item_wish">Wish list</string>
    <string name="menu_item_logout">Logout</string>
    <string name="enter_product_s_search_act">Type product\'s </string>
    <string name="log_in">Log in</string>
</resources>
