<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/nav_cart"
            android:title="@string/menu_item_cart"
            />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/menu_item_search"
            />

        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/category"
            android:title="@string/menu_item_categories"
            />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_item_settings"
           />

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/orders"
            android:title="@string/menu_item_orders"
           />

        <item
            android:id="@+id/nav_wish"
            android:icon="@drawable/wish"
            android:title="@string/menu_item_wish"
            />

        <item
            android:id="@+id/nav_coupons"
            android:icon="@drawable/coupon"
            android:title="Coupons"
            />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_item_logout"
            />

    </group>
</menu>
